--- a/example2.html
+++ b/example2.html
@@ -1,31 +1,38 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+	 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+	<title>Inline Text Editing 1.2</title>
 	<link rel='stylesheet' type='text/css' href='styles2.css' />
 	<script type='text/javascript' src='jquery-1.3.1.min.js'></script>
-	<script type='text/javascript' src='jquery.inline-edit.pack.js'></script>
-<script type='text/javascript'>
-$(document).ready(function(){
-	$('#first-block').inlineEdit({display: '.original', form: '.newText', text: '.user-edit', save: '#send', cancel: '#stop', hover: 'hover'});
-	$('.second-block').inlineEdit({href: 'ajax.php', display: '#old', text: '#change', save: '.send', cancel: '.stop', hover: 'hover', loadtxt: 'Lag'});
-});
-</script>
+	<script type='text/javascript' src='jquery.inline-edit.js'></script>
 </head>
 <body>
 <!--
-Inline Text Edit
-April 3, 2009
+Inline Text Editing 1.2
+August 22, 2009
 Corey Hart @ http://www.codenothing.com
 -->
 
-<!-- Page Info -->
-<h1>In-Line Text Editing</h1>
+
+<h1>Inline Text Editing 1.2</h1>
+
+
 <pre>
 $(document).ready(function(){
 	$('#first-block').inlineEdit({display: '.original', form: '.newText', text: '.user-edit', save: '#send', cancel: '#stop', hover: 'hover'});
 	$('.second-block').inlineEdit({href: 'ajax.php', display: '#old', text: '#change', save: '.send', cancel: '.stop', hover: 'hover', loadtxt: 'Lag'});
 });
 </pre>
-<!-- Page Info -->
+
+
+<script type='text/javascript'>
+$(document).ready(function(){
+	$('#first-block').inlineEdit({display: '.original', form: '.newText', text: '.user-edit', save: '#send', cancel: '#stop', hover: 'hover'});
+	$('.second-block').inlineEdit({href: 'ajax.php', display: '#old', text: '#change', save: '.send', cancel: '.stop', hover: 'hover', loadtxt: 'Lag'});
+});
+</script>
 
 
 <div id='first-block'>
@@ -45,6 +52,15 @@ $(document).ready(function(){
 		<input type='submit' class='stop' value=' Cancel ' />
 	</span>
 </span>
+
+
+<br>
+<div style='margin-top: 100px;font-size: 9pt;'>
+	<a href='index.html'>Example 1</a> |
+	<b>Example 2</b> | 
+	<a href='docs.html'>Docs</a>
+</div>
+
 
 </body>
 </html>
