--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+	 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+	<title>Inline Text Editing 1.2</title>
 	<link rel='stylesheet' type='text/css' href='styles.css' />
 	<script type='text/javascript' src='jquery-1.3.1.min.js'></script>
 	<script type='text/javascript' src='jquery.inline-edit.js'></script>
-<script type='text/javascript'>
-$(document).ready(function(){
-	$('.inline-edit').inlineEdit({hover: 'hover'});
-});
-</script>
 </head>
 <body>
 <!--
-Inline Text Edit
-April 3, 2009
+Inline Text Editing 1.2
+August 22, 2009
 Corey Hart @ http://www.codenothing.com
 -->
 
 <!-- Page Info -->
-<h2>In-Line Text Editing</h2>
+<h2>Inline Text Editing 1.2</h2>
 <pre>
 $(document).ready(function(){
 	$('.inline-edit').inlineEdit({hover: 'hover'})
@@ -25,6 +24,11 @@ $(document).ready(function(){
 </pre>
 <!-- Page Info -->
 
+<script type='text/javascript'>
+$(document).ready(function(){
+		$('.inline-edit').inlineEdit({hover: 'hover'});
+});
+</script>
 
 <div class='inline-edit'>
 	<div class='display'>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi lacus felis, euismod at, pulvinar sit amet, dapibus eu, eros. Etiam tellus. Nam vestibulum porttitor urna. Phasellus aliquet pretium quam. Proin pharetra, wisi nec tristique accumsan, magna sapien pulvinar purus, vel hendrerit ipsum tellus at ante.</div>
@@ -44,6 +48,14 @@ $(document).ready(function(){
 		<input type='submit' class='save' value=' Save ' />
 		<input type='submit' class='cancel' value=' Cancel ' />
 	</div>
+</div>
+
+
+<br>
+<div style='margin-top: 100px;font-size: 9pt;'>
+	<b>Example 1</b> |
+	<a href='example2.html'>Example 2</a> |
+	<a href='docs.html'>Docs</a>
 </div>
 
 </body>
