-Added postFormat option -Implemented $.ajax instead of $.fn.load

--- a/demo/example2.html
+++ b/demo/example2.html
@@ -20,17 +20,47 @@ Corey Hart @ http://www.codenothing.com
 
 
 <pre>
-$(document).ready(function(){
-	$('#first-block').inlineEdit({display: '.original', form: '.newText', text: '.user-edit', save: '#send', cancel: '#stop', hover: 'hover'});
-	$('.second-block').inlineEdit({href: 'ajax.php', display: '#old', text: '#change', save: '.send', cancel: '.stop', hover: 'hover', loadtxt: 'Lag'});
+jQuery(function( $ ){
+	$('#first-block').inlineEdit({
+		display: '.original',
+		form: '.newText',
+		text: '.user-edit',
+		save: '#send',
+		cancel: '#stop',
+		hover: 'hover'
+	});
+	$('.second-block').inlineEdit({
+		href: 'ajax.php',
+		display: '#old',
+		text: '#change',
+		save: '.send',
+		cancel: '.stop',
+		hover: 'hover',
+		loadtxt: 'Lag'
+	});
 });
 </pre>
 
 
 <script type='text/javascript'>
-$(document).ready(function(){
-	$('#first-block').inlineEdit({display: '.original', form: '.newText', text: '.user-edit', save: '#send', cancel: '#stop', hover: 'hover'});
-	$('.second-block').inlineEdit({href: 'ajax.php', display: '#old', text: '#change', save: '.send', cancel: '.stop', hover: 'hover', loadtxt: 'Lag'});
+jQuery(function( $ ){
+	$('#first-block').inlineEdit({
+		display: '.original',
+		form: '.newText',
+		text: '.user-edit',
+		save: '#send',
+		cancel: '#stop',
+		hover: 'hover'
+	});
+	$('.second-block').inlineEdit({
+		href: 'ajax.php',
+		display: '#old',
+		text: '#change',
+		save: '.send',
+		cancel: '.stop',
+		hover: 'hover',
+		loadtxt: 'Lag'
+	});
 });
 </script>
 
