--- a/demo/index.html
+++ b/demo/index.html
@@ -18,15 +18,15 @@ Corey Hart @ http://www.codenothing.com
 <!-- Page Info -->
 <h2>Inline Text Editing [VERSION]</h2>
 <pre>
-$(document).ready(function(){
+jQuery(function( $ ){
 	$('.inline-edit').inlineEdit({hover: 'hover'})
 });
 </pre>
 <!-- Page Info -->
 
 <script type='text/javascript'>
-$(document).ready(function(){
-		$('.inline-edit').inlineEdit({hover: 'hover'});
+jQuery(function( $ ){
+	$('.inline-edit').inlineEdit({hover: 'hover'})
 });
 </script>
 
