--- a/demo/example2.html
+++ b/demo/example2.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Inline Text Editing [VERSION]</title>
+	<title>Inline Text Editing 1.3</title>
 	<link rel='stylesheet' type='text/css' href='styles2.css' />
 	<script type='text/javascript' src='../jquery/jquery-1.4.2.js'></script>
 	<script type='text/javascript' src='../src/jquery.inline-edit.js'></script>
 </head>
 <body>
 <!--
-Inline Text Editing [VERSION]
-[DATE]
+Inline Text Editing 1.3
+April 26, 2010
 Corey Hart @ http://www.codenothing.com
 -->
 
 
-<h1>Inline Text Editing [VERSION]</h1>
+<h1>Inline Text Editing 1.3</h1>
 
 
 <pre>
