--- a/demo/index.html
+++ b/demo/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Inline Text Editing [VERSION]</title>
+	<title>Inline Text Editing 1.3</title>
 	<link rel='stylesheet' type='text/css' href='styles.css' />
 	<script type='text/javascript' src='../jquery/jquery-1.4.2.js'></script>
 	<script type='text/javascript' src='../src/jquery.inline-edit.js'></script>
 </head>
 <body>
 <!--
-Inline Text Editing [VERSION]
-[DATE]
+Inline Text Editing 1.3
+April 26, 2010
 Corey Hart @ http://www.codenothing.com
 -->
 
 <!-- Page Info -->
-<h2>Inline Text Editing [VERSION]</h2>
+<h2>Inline Text Editing 1.3</h2>
 <pre>
 jQuery(function( $ ){
 	$('.inline-edit').inlineEdit({hover: 'hover'})
